Fri Apr 24 03:26:10 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Don't wrap Query::LEAF_* - they're for internal
	  use in xapian-core.
	* python/smoketest.py: Add test_internal_enums_not_wrapped to check
	  that xapian.Query has no attributes starting with "LEAF_".

Mon Apr 13 06:22:15 GMT 2015  Olly Betts <olly@survex.com>

	* tcl8/tcl.i: Adjust precedence of the typecheck typemap for wrapping
	  constructing a query from a Tcl list so that we disambiguate this
	  from the new OP_WILDCARD constructor correctly.

Thu Apr 09 21:47:28 GMT 2015  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Ship generate-rdoc-stubs in the tarball.  Reported
	  by Matthias Klose in https://bugs.debian.org/782270

Fri Mar 13 10:33:47 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Fix 'make install' when
	  building from git with --disable-documentation.  Fix to handle a
	  VPATH build from a tarball when the generated docs will be in
	  $(srcdir).

Fri Mar 13 05:28:28 GMT 2015  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am,lua/Makefile.am,perl/Makefile.am,
	  php/Makefile.am,ruby/Makefile.am,tcl8/Makefile.am: Fix "make
	  install" from a git tree configured with --disable-documentation.
	  (Fixes #658, reported by German M. Bravo)

Tue Mar 03 04:04:36 GMT 2015  Olly Betts <olly@survex.com>

	* java/docs/examples/SimpleSearch.java: getPercent() returns an
	  integer.

Tue Mar 03 04:01:46 GMT 2015  Ashley <ashley@eclipso.ch>

	* java/docs/examples/SimpleSearch.java: Fix build and update example.

Fri Feb 13 13:10:11 GMT 2015  Olly Betts <olly@survex.com>

	* python/smoketest.py,python3/smoketest.py: Update testcases for lazy
	  wildcard expansion change in xapian-core.

Wed Jan 07 04:00:24 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Don't AC_SUBST LUA_INC as we never use it.

Thu Dec 18 00:30:06 GMT 2014  Olly Betts <olly@survex.com>

	* python/python.i: Don't release the GIL when using